--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="JSP_study00">
+        
+    <wb-module deploy-name="JSP_workspace02">
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="JSP_study00"/>
-        <property name="java-output-path" value="/JSP_study00/build/classes"/>
+                
+        <property name="java-output-path" value="/JSP_workspace02/build/classes"/>
+        <property name="context-root" value="JSP_workspace02"/>
+            
     </wb-module>
+    
 </project-modules>
